kubernetes/nfty/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfty
  namespace: nfty
  labels:
    app: nfty
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfty
  template:
    metadata:
      labels:
        app: nfty
    spec:
      containers:
      - name: nfty
        image: binwiederhier/ntfy:latest
        imagePullPolicy: Always
        args: ["serve"]
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
        volumeMounts:
        - name: nfty-data
          mountPath: /data
      volumes:
      - name: nfty-data
        persistentVolumeClaim:
          claimName: nfty-data
