kubernetes/nfty/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nfty
  namespace: nfty
spec:
  selector:
    app: nfty
  ports:
  - port: 80
    targetPort: http
    name: http
