kubernetes/nfty/ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nfty
  namespace: nfty
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - notify.xalg.im
    secretName: nfty-tls
  rules:
  - host: notify.xalg.im
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nfty
            port:
              name: http
